package org.example;

public class Point {
    private int point;

    public Point (int point){
        this.point = point;
    }


}
