package org.example;

public interface PointsDynamic {
    boolean hasAchieved(int value);
     boolean differenceOfTwo();
     boolean isWinner();
     boolean add();
}
