package org.example;

public class Referee {
    private String forename;
    private String surname;
    private String email;
    private String password;

    public Referee(String forename, String surname, String email, String password) {
        this.forename = forename;
        this.surname = surname;
        this.email = email;
        this.password = password;
    }


}
