package org.example;

import java.util.stream.Stream;

public class Scoreboard {
    Stream<Set> sets;

}
